# olmo-eval

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  implement_scicode.md  olmobase_genqa_parity_current.csv  olmobase_genqa_parity_current_with_naturalqs.csv  olmobase_genqa_parity_reference.csv  pyproject.toml  verify-scicode.md
.github/: dependabot.yml
.github/workflows/: ci.yml  outrider.yml
alembic/: README.md  metrics.ini  results.ini
alembic/metrics/: env.py
alembic/metrics/versions/: 20260219_initial_schema.py  20260220_add_gpu_summary_index.py  20260220_drop_percentile_latencies.py  20260220_rename_to_samples.py
alembic/results/: env.py  script.py.mako
alembic/results/versions/: 20260127_initial_schema.py  20260130_add_agent_metrics.py  20260201_add_duration_metrics.py  20260201_nested_metrics.py  20260427_add_results_viewer_perf_indexes.py
alembic/versions/: 20260127_add_keyset_pagination_index.py  20260128_add_experiment_group.py
examples/beaker/configs/: basic_eval.yaml  large_model.yaml  mixed_gpu.yaml  model_comparison.yaml  parallel_eval.yaml  prioritized_tasks.yaml
plans/: 001_oracle_no_gpu_task_pipeline_tests.md
scripts/: build_config.sh  build_image.sh  verify.sh
scripts/baselines/: launch_olmo3_baselines_0426.sh
scripts/beaker/: copy_beaker_secrets.sh  get_beaker_image.sh  push_beaker_image.sh
scripts/internal/: db-migrate
src/olmo_eval/analysis/: README.md  __init__.py  eval_power.py  latest_run_merge.py  pairwise.py  pairwise_metrics.py  pairwise_viewer_payload.py  scope_scores.py
src/olmo_eval/analysis/pairwise_viewer/: __init__.py  assets.py
src/olmo_eval/cli/: __init__.py  beaker.py  results.py  run.py  run_config.py  run_external.py  runner_factory.py  storage_setup.py  utils.py
src/olmo_eval/cli/beaker/: __init__.py  config_loader.py  credentials.py  experiment_builder.py  experiment_plan.py  group.py  job_assembler.py  launch.py  model_grouper.py  task_validator.py
src/olmo_eval/cli/metrics/: __init__.py  app.py  braille_patch.py  config.py  data.py  plot.py  utils.py  widgets.py
src/olmo_eval/cli/results/: README.md  __init__.py  discover.py  display.py  formatters.py  options.py  query.py  s3.py  viewer.py  viewer_server.py
src/olmo_eval/cli/run/: __init__.py  config.py  factory.py  storage.py
src/olmo_eval/cli/suite/: __init__.py
src/olmo_eval/cli/task/: __init__.py
src/olmo_eval/common/: beaker_status.py  configs.py  console.py  formatters.py  inspection.py  logging.py  repr.py  utils.py
src/olmo_eval/common/config/: __init__.py  infrastructure.py
src/olmo_eval/common/constants/: infrastructure.py  models.py
src/olmo_eval/common/execution/: __init__.py  environment.py  process_pool.py
src/olmo_eval/common/metrics/: __init__.py  base.py  ifeval.py  predictions.py
src/olmo_eval/common/scorers/: __init__.py  base.py  execution.py  ifeval.py  llm_judge.py  substring.py
src/olmo_eval/common/types/: base.py  literals.py  tools.py
src/olmo_eval/core/: __init__.py  configs.py  debug.py  formatters.py  logging.py  metrics.py  types.py  utils.py
src/olmo_eval/core/agents/: __init__.py  executor.py
src/olmo_eval/core/constants/: __init__.py  infrastructure.py  models.py
src/olmo_eval/core/metrics/: __init__.py  base.py
src/olmo_eval/core/scorers/: __init__.py  base.py  llm_judge.py  tools.py  trajectory.py
src/olmo_eval/core/tools/: __init__.py  base.py  implementations.py
src/olmo_eval/core/types/: __init__.py  agent.py  base.py  literals.py  tools.py  trajectory.py
src/olmo_eval/data/: ruler_loader.py  ruler_tasks.py  sources.py
src/olmo_eval/data/backends/: gcs.py  huggingface.py  s3.py
src/olmo_eval/evals/constants/: code.py
src/olmo_eval/harness/: __init__.py  config.py  harness.py  presets.py
src/olmo_eval/inference/: __init__.py  base.py  dispatch.py  gpu_planner.py  huggingface.py  litellm.py  manager.py  mock.py  provider_manager.py  registry.py  utils.py  vllm.py  vllm_server.py
src/olmo_eval/launch/: __init__.py  config.py
src/olmo_eval/runners/: __init__.py  aggregation.py  asynchronous.py  base.py  builders.py  common.py  constants.py  execution.py  formatting.py  metrics.py  mixins.py  models.py  storage.py  synchronous.py  types.py  utils.py  writers.py
src/olmo_eval/storage/: artifacts.py  base.py  formatters.py
tests/: conftest.py  test_runner.py
tests/analysis/: test_eval_power.py  test_pairwise.py
tests/cli/: test_arg_round_trip.py  test_dotlist_overrides.py  test_pairwise.py  test_utils.py
tests/cli/beaker/: test_launch.py
tests/core/: test_beaker_status.py  test_configs.py  test_formatters.py  test_llm_judge_scorer.py  test_metrics.py  test_reliability_metrics.py  test_tool_scorers.py  test_tool_types.py  test_tools.py  test_trajectory_scorers.py  test_trajectory_types.py
tests/core/harness/: test_config.py  test_harness.py  test_presets.py  test_scaffold.py
tests/data/: test_s3_backend.py  test_task_config_integration.py
tests/evals/extract/: test_mcq.py
tests/evals/suites/: test_olmobase.py  test_registry.py  test_science.py
tests/evals/tasks/: test_aime.py  test_astabench_sqa.py  test_base.py  test_bigcodebench.py  test_geneturing.py  test_gpqa.py  test_hmmt.py  test_ifbench.py  test_lab_bench.py  test_medqa.py  test_naturalqs.py  test_oracle_no_gpu_pipeline.py  test_registry.py  test_scicode.py  test_simpleqa_agent.py  test_tasks.py
tests/inference/: test_registry.py  test_templates.py
tests/inference/metrics/: test_vllm_monitor.py
tests/inference/patches/: __init__.py  test_olmo3_tool_parser_patch.py
tests/integration/: conftest.py  docker-compose.yml  init-db.sql  test_metrics.py  test_repository.py  test_storage.py  test_storage_postgres_new.py  test_vllm_provider.py
tests/launch/: test_beaker.py  test_config.py
tests/providers/: test_olmo_core_provider.py  test_vllm_server_logprobs.py  test_vllm_server_startup.py
tests/runners/: test_aggregate_results.py  test_async_worker_flow.py  test_request_rows.py
tests/runners/io/: test_builders.py
tests/storage/: test_base.py  test_queries.py
(+210 files in other folders)
