[project]
name = "olmo-eval-internal"
version = "0.1.0"
description = "Evaluation toolkit for OLMo models"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Allen Institute for AI" },
]
keywords = ["olmo", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click~=8.3.1",
    "datasets>=3.2.0",
    "numpy>=1.20.0",
    "omegaconf~=2.3.0",
    "rich~=14.3.1",
    "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/allenai/olmo-eval"
Repository = "https://github.com/allenai/olmo-eval"
Issues = "https://github.com/allenai/olmo-eval/issues"

[project.optional-dependencies]
hf = [
    "transformers~=4.57.3",
]
vllm = [
    "vllm[runai]==0.13.0",  # runai extras enable S3 model loading
    "opencv-python-headless==4.12.0.88",  # Required to avoid libxcb import error
    "torch-c-dlpack-ext",  # Required for TVM tensor allocation in vLLM
]
litellm = [
    "litellm~=1.80.11",
]
agents = [
    "openai-agents~=0.7.0",
    "httpx~=0.28.1",
]
beaker = [
    "beaker-py>=2.5.4,<3",
    "beaker-gantry>=3.2.0,<4",
]
s3 = [
    "boto3>=1.34.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.1",
]
storage = [
    "olmo-eval-internal[s3,postgres]",
]
# Runtime without Beaker (most common for container execution)
runtime = [
    "olmo-eval-internal[storage]",
]

[project.scripts]
olmo-eval = "olmo_eval.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.10",
    "pre-commit>=4.0.0",
    "olmo-eval-internal[storage]",
    "jinja2>=3.1.6",
]

# ty file-based overrides for optional dependencies (inference providers use vllm/litellm)
[[tool.ty.overrides]]
include = ["src/olmo_eval/inference/**"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests requiring external services (docker, etc.)",
]

[tool.coverage.run]
source = ["src/olmo_eval"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
