[project]
name = "olmo-eval-internal"
version = "0.1.0"
description = "Evaluation toolkit for OLMo models"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Allen Institute for AI" },
]
keywords = ["olmo", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click~=8.3.2",
    "datasets>=3.2.0",
    "numpy>=1.20.0",
    "omegaconf~=2.3.0",
    "prometheus_client>=0.21.0",
    "rich~=14.3.4",
    "sympy>=1.12",
    "textual-plot>=0.10.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0,<0.26.0",
    "ifbench @ git+https://github.com/allenai/IFBench.git@finbarr/clean-install",
    # syllapy (transitive via ifbench) imports pkg_resources, which setuptools>=81 removes.
    "setuptools<81",
]

[project.urls]
Homepage = "https://github.com/allenai/olmo-eval"
Repository = "https://github.com/allenai/olmo-eval"
Issues = "https://github.com/allenai/olmo-eval/issues"

[project.optional-dependencies]
hf = [
    "transformers>=5.4.0",
]
vllm = [
    # vllm + its companions are Linux/CUDA-only; skip on macOS so the lockfile
    # doesn't resolve GPU wheels for Darwin.
    "vllm[runai]==0.19.0 ; platform_system != 'Darwin'",  # runai extras enable S3 model loading
    "opencv-python-headless==4.13.0.92 ; platform_system != 'Darwin'",  # Required to avoid libxcb import error
    "torch-c-dlpack-ext ; platform_system != 'Darwin'",  # Required for TVM tensor allocation in vLLM
]
litellm = [
    "litellm~=1.80.11",
]
agents = [
    "openai-agents~=0.7.0",
    "httpx~=0.28.1",
]
analysis = [
    "matplotlib~=3.10.8",
    "seaborn~=0.13.2",
    "scipy~=1.17.1",
]
openhands = [
    "openhands-ai~=1.4.0",
]
sandbox = [
    "swe-rex[modal] @ git+https://github.com/jdahm/SWE-ReX.git@johannd/ai2",
]
beaker = [
    "beaker-py>=2.5.4,<3",
    "beaker-gantry>=3.2.0,<4",
]
s3 = [
    "boto3>=1.34.0",
    "smart_open[s3]>=7.0.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.1",
]
gpu = [
    "nvidia-ml-py>=12.560 ; platform_system != 'Darwin'",
]
clients = [
    "openai~=2.21.0",
]
storage = [
    "olmo-eval-internal[s3,postgres]",
]

[project.scripts]
olmo-eval = "olmo_eval.cli:main"

[tool.uv]
package = true
override-dependencies = [
    "transformers>=5.4.0",
]
# vllm is installed by default; openhands users must opt out via
# `uv sync --no-group vllm --group openhands`.
default-groups = ["dev", "vllm"]
# These extras/groups have incompatible transitive dependencies and cannot be installed together
conflicts = [
    [
        { extra = "agents" },
        { extra = "openhands" },
    ],
    [
        { extra = "vllm" },
        { extra = "openhands" },
    ],
    [
        { extra = "clients" },
        { extra = "openhands" },
    ],
]

[tool.setuptools.package-data]
"olmo_eval.analysis.pairwise_viewer" = ["static/*.css", "static/*.js", "templates/*.html"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "ty==0.0.32",
    "pre-commit>=4.0.0",
    # Unit tests import analysis helpers directly, so dev installs need these extras too.
    "olmo-eval-internal[storage,beaker,hf,analysis]",
    "jinja2>=3.1.6",
    "google-api-core>=2.0.0",
    "parameterized>=0.9.0",
]
# Mirror of the `vllm` extra as a uv dependency group so it can be enabled by
# default for GPU/CI workflows while still being installable via pip extras.
vllm = [
    "olmo-eval-internal[vllm]",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.per-file-ignores]
# Long strings in test fixtures
"tests/**/fixtures.py" = ["E501"]
# Long URLs in model configs
"src/olmo_eval/common/constants/models.py" = ["E501"]
# Verbatim prompt templates from asta-bench reference implementation
"src/olmo_eval/evals/tasks/astabench_sqa.py" = ["E501"]
# Verbatim prompt templates and gold snippets from scicode-bench reference implementation
"src/olmo_eval/evals/external/benchmarks/scicode/prompts.py" = ["E501"]
# Embedded fewshot data with long string literals
"src/olmo_eval/evals/tasks/arc.py" = ["E501"]
"src/olmo_eval/evals/tasks/csqa.py" = ["E501"]
"src/olmo_eval/evals/tasks/drop.py" = ["E501"]
"src/olmo_eval/evals/tasks/hellaswag.py" = ["E501"]
"src/olmo_eval/evals/tasks/jeopardy.py" = ["E501"]
"src/olmo_eval/evals/tasks/piqa.py" = ["E501"]
"src/olmo_eval/evals/tasks/socialiqa.py" = ["E501"]
"src/olmo_eval/evals/tasks/squad.py" = ["E501"]
# Static fewshot data with long string literals
"src/olmo_eval/evals/tasks/constants/*" = ["E501"]
[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests requiring external services (docker, etc.)",
]

[tool.coverage.run]
source = ["src/olmo_eval"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"


[tool.ty.analysis]
# Optional dependencies that may not be installed in every environment
allowed-unresolved-imports = [
    "beaker.**",
    "gantry.**",
    "transformers.**",
    "vllm.**",
    "torch.**",
    "math_verify.**",
    "openai.**",
    "smart_open.**",
    "google.cloud.**",
    "matplotlib.**",
    "scipy.**",
    "instructions_registry.**",
    "instructions.**",
]

[tool.gantry]
gh_token_secret = "GITHUB_TOKEN"
log_level = "warning"
quiet = false
